# Artificial_Intelligence_laboratory_work_1

./: .pre-commit-config.yaml  README.md  pyproject.toml
examples/: problem.py
graphs/: Описание_укороченного_графа.dot
individual/: traveling_salesman.py
src/: example.py  traveling_salesman.py
